mobile - fixed overflow on welcome page. fixed login/register form sizes.

--- a/resources/sass/auth/_auth.scss
+++ b/resources/sass/auth/_auth.scss
@@ -129,3 +129,15 @@
         font-size: 1rem;
     }
 }
+
+
+
+@media only screen and (max-width: 1200px) {
+
+    .auth-page {
+        .default-form {
+            width: 350px;
+        }
+    }
+
+}
